# stock-vibe

./: .gitignore  AGENTS.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
memory-bank/: PRD.md  decisions.md  progress.md
stock_vibe/: __init__.py  api.py  config.py  crawler.py  market_metadata.py  models.py  parsing.py  service.py  storage.py
stock_vibe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stock_vibe/data/: crawl_log.json  kospi-company-map.json  kospi-crawl-log.json  kospi-latest-market-snapshot.csv  kospi-storage-state.json  latest_market_snapshot.csv  tradingview-storage-state.json  us-crawl-log.json  us-latest-market-snapshot.csv  us-storage-state.json
tests/: test_parsing.py
