[project]
name = "stock-vibe"
version = "0.1.0"
description = "TradingView volume leaders crawler with a Python API backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "requests>=2.32.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stock_vibe*"]
